#148: Apply Java17 features.